fix(): align list elements

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,10 @@
   text-align: center !important;
 }
 
+.ion-text-right {
+  text-align: right !important;
+}
+
 .ion-text-uppercase {
   text-transform: uppercase !important;
 }
@@ -96,6 +100,24 @@
 
 .country-thumbnail ion-img {
   border-radius: 0.25rem;
+}
+
+.standings-position,
+.quali-position,
+.race-position {
+  min-width: 1.5rem;
+}
+
+.race-date {
+  min-width: 2.5rem;
+}
+
+.race-time {
+  min-width: 5.5rem;
+}
+
+.race-points {
+  min-width: 1.25rem;
 }
 
 .standings-points {
